--- a/src/components/collection-preview/Collection-preview.styles.scss
+++ b/src/components/collection-preview/Collection-preview.styles.scss
@@ -6,10 +6,17 @@
   .title {
     font-size: 28px;
     margin-bottom: 25px;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .preview {
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
   }
 }
